# LingNc

./:  Set-ExecutionPolicy RemoteSigned.ps1  .editorconfig  .gitignore  1.cpp  12  12.c  C_Word_Ladder.cpp  README.md  REDEME.md  ceshi  editor  editor.c  lingnc-20231212.code-profile  lingnc.code-profile  settings.json  ssh-copy-id.bat
.cph/: .B_Binary_Alchemy.cpp_fe68654dc0a93a4a0e4a2a2b65a065c5.prob
ACM/ACM-01/: 7-1.cpp  7-4  7-4.cpp  ceshi  ceshi.cpp
ACM/ACM-02/: 7-1.cpp  7-10.cpp  7-3.cpp  7-4.cpp
ACM/ACM-03/: 7-6.cpp  7-7.cpp
A_data/: 1.in
Algos/: .gitignore
Algos/Luogu/: Luogu_P_2280.cpp
Algos/图/: Luogu_P_1113.cpp  Luogu_P_3916.cpp  Luogu_P_5318.cpp  Luogu_P_5318.md  数组.cpp  链式前向星.cpp
C++/: .gitignore  0  hello.cpp  swap  swap.cpp  test.cpp  type  type.cpp
OJ-C/: 0从今天开始入坑C语言  0从今天开始入坑C语言.c  100求组合数（函数专题）  100求组合数（函数专题）.c  101逆序数字（函数专题）  101逆序数字（函数专题）.c  102火车票退票费计算（函数专题）  102火车票退票费计算（函数专题）.c  103平均学分绩点（函数专题）  103平均学分绩点（函数专题）.c  104求因子和（函数专题）  104求因子和（函数专题）.c  105判断友好数对（函数专题）  105判断友好数对（函数专题）.c  106-0回文数（函数专题）  106-0回文数（函数专题）.c  106回文数（函数专题）  107回文数猜想（函数专题）  107回文数猜想（函数专题）.c  108打印数字图形（函数专题）  108打印数字图形（函数专题）-Du  108打印数字图形（函数专题）-Du.c  108打印数字图形（函数专题）.c  109数根（函数专题）  109数根（函数专题）.c  10求圆的周长和面积.c  110最近共同祖先（函数专题）  110最近共同祖先（函数专题）.c  111多个整数的逆序输出（函数专题）  111多个整数的逆序输出（函数专题）.c  112进制转换（函数专题）  112进制转换（函数专题）.c  113递归调用的次数统计（函数专题）  113递归调用的次数统计（函数专题）.c  114逆序  114逆序.c  115数组最小值  115数组最小值.c  116删除元素  116删除元素.c  (+319 more)
OJ-C++/: 154校门外的树  154校门外的树.cpp  155字符串比较 多实例  155字符串比较 多实例.cpp  163亲和串（字符串）  163亲和串（字符串）.cpp  165实数的小数部分（指针专题）  165实数的小数部分（指针专题）.cpp  169大整数（指针专题）  169大整数（指针专题）.cpp  ceshi  ceshi.cpp
daily/: 1  1.c  1.cpp  1.html  1.xml  2  2.c  2.cpp  7-1 须知  C语言指针与数组-理解  C语言指针与数组-理解.c  ceshi.xml  ceshi2.xml  deep.py  deepseek.py  du  du.c  out.xml  ptr 1  ptr 1.c  sorted_output.xml  test.txt  素数  素数.c  读写文件  读写文件.c
idea/: arr  arr.c  arr2  arr2.c  arr3  arr3.c  arr4  arr4.c  高精度阶乘计算器.c
learn-web/: 1.js  CatPhoto.html
machine_learning/: .gitignore
markdown/: 1.md  1.tex  Du-高等数学上册练习题.md  prompt.md  ptr.md
note/: Aidlux安装npc客户端.md  autorun.sh  termux-npc.sh
school/数据结构实验/lab2-bak/: .gitignore  CMakeLists.txt  Makefile  README.md  lab2-bak.code-workspace  main.c
school/数据结构实验/lab2-bak/ext/: bitset.h
school/数据结构实验/lab2-bak/include/: hdfile.h  huffcode.h  huffman.h  interface.h  pair.h  tools.h
school/数据结构实验/lab2-bak/src/: hdfile.c  huffcode.c  huffman.c  interface.c  pair.c  sqlist.c  tools.c
school/数据结构实验/lab2-bak/tests/: analyze_large.c  analyze_total.c  check_freq_table.c  debug_bit_counting.c  debug_decode_unicode.c  debug_file_process.c  debug_freq.c  debug_huffman.c  debug_length_io.c  debug_length_table.c  debug_length_write_read.c  debug_simple_unicode.c  debug_tree_unicode.c  efficiency_analysis.c  simple_analysis.c  test_buffer_boundary.c  test_main_encode_decode.c  test_sqlist_perf.c  test_total_bits.c  test_utf8.c  test_utf8_debug.c
setting/: LingNc.code-profile  lingnc-231121.code-profile  lingnc20231107.code-profile
snippet/: C main.code-snippets  case.code-snippets  default.code-snippets  do while.code-snippets  for.code-snippets  if.code-snippets  printf.code-snippets  return.code-snippets  scanf.code-snippets  switch.code-snippets  time sum.code-snippets  while.code-snippets
talex/: 1.md  1.tex
test/: test_1.in
vscode/: launch.json  settings.json  tasks.json
xiaodu/: 0  118  118.c  124  124.c  146.c  20240318  20240318.c  89  89.c  复数.cpp  最大公约数  海盗分赃.c
周赛/1/: A  (+4 more)
知识图谱/: 1.最大公约数  1.最大公约数.c  2.n个数求和.c  3.回文数  5.选票统计
(+2123 files in other folders)
